--- a/layouts/partials/css_scripts/singlePageLayouts/codePage.css
+++ b/layouts/partials/css_scripts/singlePageLayouts/codePage.css
@@ -44,4 +44,5 @@ pre, code {
     font-family: 'Roboto Mono', monospace;
     color: #7dba25;
     background-color: #f4f4f4;
+    font-size: 0.85rem;
 }
